Allow adding options for iso and images

--- a/etc/grub-imageboot.conf
+++ b/etc/grub-imageboot.conf
@@ -1,3 +1,10 @@
 # Where to find the iso/floppy images
 
 IMAGES="/boot/images"
+
+# You can override the boot options for iso/floppy images here
+# see http://syslinux.zytor.com/wiki/index.php/MEMDISK for details
+
+#IMAGEOPTS="rawimg"
+#ISOOPTS="iso"
+
