--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: grub-imageboot
 Section: admin
 Priority: extra
-Maintainer: Alexander Wirt <formorer@formorer.de>
+Maintainer: Alexander Wirt <formorer@debian.org>
 Build-Depends: debhelper (>= 7) 
 Standards-Version: 3.9.1
 
