Depend on syslinux-common

--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Standards-Version: 3.9.1
 
 Package: grub-imageboot
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, syslinux (>= 4), grub-pc
+Depends: ${shlibs:Depends}, ${misc:Depends}, syslinux-common (>= 4), grub-pc
 Description: boot iso and floppy images with grub2 and syslinux memdisk
  This package installs a grub hook which integrates iso and floppy images
  into the grub menu.
